--- a/meme-generator/src/index.css
+++ b/meme-generator/src/index.css
@@ -24,3 +24,24 @@
   margin-right:20px;
   font-size:14px;
 }
+
+.input-container{
+  padding:30px;
+  display: grid;
+  grid-template: 40px 40px/auto auto;
+  font-family: 'Inter', sans-serif;
+  gap:17px;
+}
+.text-container{
+  border:2px solid grey;
+  border-radius:5px;
+  text-indent:5px;
+}
+.meme-button{
+  grid-column: 1/-1;
+  border-radius: 5px;
+  border:none;
+background: linear-gradient(90deg, #711F8D 1.14%, #A818DA 100%);
+color:white;
+font-size: 16px;
+}
